# mcs

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README_EN.md
.agents/: AGENTS.md  README.md
.agents/skills/mica-common-tasks/: SKILL.md
.agents/skills/mica-communication/: SKILL.md
.agents/skills/mica-lifecycle/: SKILL.md
.agents/skills/mica-linux-master/: SKILL.md
.agents/skills/mica-overview/: SKILL.md
.agents/skills/mica-pedestals/: SKILL.md
.agents/skills/mica-rtos-client/: SKILL.md
.agents/skills/micrun-overview/: SKILL.md
.agents/tools/: atomgit_pr_context.py  fetch_component_source.py
benchmark_demo/: benchmark.c  mica_main.c  pty_test.c  rpmsg_pty.c
mcs_km/: Makefile  main.c  mcs_ivshmem.c  mcs_km.c  mcs_remoteproc.c  mmu_map.c  xen-mcsback.c
mcs_km/i210/: Makefile  i210_drv.c  i210_eth.h  i210_intel.h  i210_main.c
mcs_km/include/: jailhouse_rproc_helpers.h  mmu_map.h
mica/: CMakeLists.txt  mica_debug.h  mica_main.c
mica/micactl/: mica.py  setup.py
mica/micad/: CMakeLists.txt  main.c  socket_listener.c  socket_listener.h
mica/micad/init/: micad.init  micad.service
mica/micad/services/: mica_debug.c  mica_debug.h  mica_debug_common.h  mica_debug_ring_buffer.c  mica_debug_ring_buffer.h  mica_gdb_server.c  mica_gdb_server.h  ring_buffer.c  rpmsg_pty.c
mica/micad/services/debug/: mica_debug.c  mica_debug_ring_buffer.c  mica_gdb_server.c  mica_gdb_server.h
mica/micad/services/pty/: rpmsg_pty.c
mica/micad/services/rpc/: rpc_backend.c  rpc_err.h  rpc_helper.c  rpc_internal_model.h  rpc_server_internal.h  rpc_workers.c  rpmsg_rpc.c  rpmsg_rpc.h
mica/micad/services/umt/: rpmsg_umt.c  rpmsg_umt.h
mica_demo/: mica_debug.c  mica_debug.h  mica_main.c  rpmsg_pty.c  rpmsg_pty.h
mica_demo/test_ring_buffer/: CMakeLists.txt  test_ring_buffer.h
micrun/: .gitignore  AGENTS.md  Makefile  README.md  go.mod  go.sum  main.go
micrun-go/: .gitignore  Makefile
micrun-go/docs/: quick-start.md  resource-design.md
micrun-go/tests/mock_micad/: Makefile  README.md  test_simple.sh
micrun/.zed/: settings.json
micrun/definitions/: annotations.go  mica_client.go  micrun.go  paths.go  paths_debug.go
micrun/definitions/definitions/: mica_client.go
micrun/docs/: README.md  quick-start.md  resource-design.md  resource-mapping.md
micrun/docs/archive/: README.md  detach-analysis.md  epoll-optimization-plan.md  old-io-redesign.md
micrun/docs/development/: README.md  k8s-test-plan.md  test-framework.md  testing.md
micrun/docs/features/: README.md
micrun/docs/internals/: README.md  architecture.md  io-system.md  logging.md  pedestal-architecture.md  sandbox-validation.md  state-management.md  target-architecture.md
micrun/docs/io/: io-redesign.md
micrun/docs/issues/: micad-tty-timeout.md
micrun/docs/logger-refactor/: design.md  usage.md
micrun/docs/reference/: README.md  annotations.md  api-reference.md  configuration.md  resources.md
micrun/docs/study/: namespace-env-analysis.md  oneshot-command-analysis.md  restore-sandbox-analysis.md  runc-vs-micrun.md  shim-dev-notes.md  shim-start-delete-analysis.md
micrun/docs/user/: README.md  kubernetes.md  performance-tuning.md  troubleshooting.md
micrun/errors/: err.go
micrun/internal/bootstrap/: runner.go  runner_test.go
micrun/internal/ports/: guest.go  guest_executor.go  hypervisor.go  io.go  recovery.go  state_store.go  task.go
micrun/logger/: logger.go  logger_debug.go  logger_release.go
micrun/pkg/configstack/: container_stack.go  container_stack_test.go  micrun_configs.go
micrun/pkg/cpuset/: cpuset.go
micrun/pkg/io/: binary.go  copier.go  copier_test.go  events.go  session.go  types.go
micrun/pkg/libmica/: client.go  client_test.go  socket.go  (+5 more)
micrun/tests/: README.md  TEST_RELIABILITY.md  run_all_tests.sh  state_validation_test.sh  test-env.sh  test_tty_attach.exp
micrun/version/: version.go
modules/: mcs_common.h  openamp_module.c  openamp_module.h  remoteproc_module.c  remoteproc_module.h  rpmsg_endpoint.c  rpmsg_endpoint.h  rpmsg_rpc_service.c  rpmsg_sys_service.h  virtio_module.c  virtio_module.h
openamp_demo/: rpmsg_main.c  rpmsg_matrix_multiply.c  rpmsg_matrix_multiply.h  rpmsg_ping.c  rpmsg_ping.h
rpmsg_pty_demo/: rpmsg_main.c  rpmsg_pty.c  rpmsg_pty.h
rpmsg_rpc_demo/: rpc_err.h  rpc_helper.c  rpc_internal_model.h  rpc_server_internal.h  rpmsg_backend.c  rpmsg_main.c  rpmsg_workers.c
rpmsg_rpc_demo/ethercat_cmd/: mq_master.c
rtos/arm64/: hieulerpi-uniproton.conf  hieulerpi-uniproton.elf  kp920-zephyr-xen.conf  qemu-uniproton-xen.conf  qemu-zephyr-ivshmem.conf  qemu-zephyr-ivshmem.elf  qemu-zephyr-rproc.conf  qemu-zephyr-rproc.elf  qemu-zephyr-xen.conf  rpi4-uniproton-gdb.conf  rpi4-uniproton-gdb.elf  rpi4-uniproton.conf  rpi4-uniproton.elf  rpi4-zephyr-ivshmem.conf  rpi4-zephyr-ivshmem.elf
rtos/libmica/: CMakeLists.txt  README.md
rtos/libmica/cmake/: collect.cmake
rtos/libmica/cmake/platform/: demo_riscv_gcc.cmake
rtos/libmica/lib/: CMakeLists.txt  barrier.h  delay.h  io.h  irq.h  log.h  macro.h  securec.h  sem.h
rtos/libmica/lib/system/demo/: CMakeLists.txt  barrier.h  delay.h  io.h  irq.h  log.h  macro.h  securec.h  sem.h
rtos/libmica/src/: CMakeLists.txt  mica_init.c  mica_service.c
rtos/libmica/src/include/mica/: mica.h  service.h
rtos/libmica/src/pedestals/: CMakeLists.txt  baremetal.c  hetero.c  mica_ped.h  ped_openamp.h  ped_rsc_table.c  ped_rsc_table.h
rtos/libmica/src/services/: CMakeLists.txt  mica_service_internal.h  tty_service.c  umt_service.c
test/benchmark_demo/: rpmsg_pty.c
test/send-data/: CMakeLists.txt  send-data.c
test/test_ring_buffer/: CMakeLists.txt  test_ring_buffer.c  test_ring_buffer.h
test/test_shared_lib/: CMakeLists.txt  README.md
test/test_shared_lib/rcv-data/: CMakeLists.txt  rcv-data.c
test/test_shared_lib/send-data/: CMakeLists.txt  send-data.c
test/test_shared_lib/send-data-2-way/: CMakeLists.txt  send-data-2-way.c
test/test_umt/: CMakeLists.txt
test/test_umt/riscv/: CMakeLists.txt  rcv-callback.c  rcv-data.c  send-data-2-way.c  send-data.c
tools/: create_dtb.sh  mica
(+598 files in other folders)
